tests/snapshots/cli_help__cli_help_status.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Print current playback state

Usage: spotuify status [OPTIONS]

Options:
      --format <FORMAT>  Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
