tests/snapshots/cli_help__cli_help_sync.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Refresh the local cache from a provider

Usage: spotuify sync [OPTIONS] [TARGET]

Arguments:
  [TARGET]  Cache domain to refresh [default: all] [possible values: all, playback, queue, devices, playlists, recent, library, search-cache]

Options:
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --prune                    Prune search-cache entries older than the retention window
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
      --older-than <OLDER_THAN>  Retention window for `sync search-cache --prune`, e.g. `7d`
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
      --provider <PROVIDER>      Provider adapter to refresh
      --format <FORMAT>          Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help                     Print help
